# ROSNavigation-HumanSocialSpace

./: README.md
humans/: CMakeLists.txt  package.xml
humans/msg/: Human.msg  HumanInteraction.msg  HumanWithInteractions.msg  HumansWithInteractions.msg  Object.msg  ObjectInteraction.msg
humans/src/: HumansWithInteractionsPublisher.py  static_humans_scenario1.py  static_humans_scenario2.py  static_humans_scenario3.py  static_humans_scenario4.py
navgoal_publisher/: CMakeLists.txt  package.xml
navgoal_publisher/src/: NavGoalPublisher.py  navgoal.py
navigation_baseline/: CMakeLists.txt  package.xml
navigation_baseline/config/base/common/: global_costmap_plugins_public_sim.yaml  global_costmap_public_sim.yaml  local_costmap_plugins_public_sim.yaml  local_costmap_public_sim.yaml
navigation_baseline/launch/: tiago_navigation.launch
navigation_socialspace/: CMakeLists.txt  package.xml
navigation_socialspace/config/base/common/: global_costmap_plugins_public_sim.yaml  global_costmap_public_sim.yaml  local_costmap_plugins_public_sim.yaml  local_costmap_public_sim.yaml
navigation_socialspace/launch/: tiago_navigation.launch
people_publisher/: CMakeLists.txt  package.xml
people_publisher/src/: PeoplePublisher.py  static_people_scenario2.py  static_people_scenario3.py  static_people_scenario4.py
socialspace_navigation_layer/: CMakeLists.txt  costmap_plugins.xml  package.xml
socialspace_navigation_layer/cfg/: SocialspaceLayer.cfg
socialspace_navigation_layer/include/socialspace_navigation_layer/: socialspace_layer.h
socialspace_navigation_layer/src/: lib_socialspace_function.py  socialspace_function.py  socialspace_function_playground.ipynb  socialspace_layer.cpp
socialspace_navigation_layer/srv/: SocialspaceFunction.srv
worlds_for__tiago_simulation__tiago_gazebo__worlds/: simple_office_scenario1.world  simple_office_scenario2.world  simple_office_scenario3.world  simple_office_scenario4.world
