<?xml version="1.0"?>
<package format="2">
  <name>navgoal_publisher</name>
  <version>0.0.0</version>
  <description>Node publishing a given navigation goal on execution.</description>
  <maintainer email="carolin.schindler@uni-ulm.de">Carolin Schindler</maintainer>
  <license>BSD</license>
  <author email="carolin.schindler@uni-ulm.de">Carolin Schindler</author>

  <buildtool_depend>catkin</buildtool_depend>
	
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>

</package>
